--- a/api/composer.json
+++ b/api/composer.json
@@ -1,8 +1,8 @@
 {
     "autoload": {
         "psr-4": {
+            "controller\\":"src/controller",
+			"model\\":"src/model",
 			"connection\\":"src/connection",
-			"controller\\":"src/controller",
-			"view\\":"src/view",
         }
 }
